# damn

./: .gitignore  CMakeLists.txt  README.md  README.txt
include/: SimpleCalculator.hpp  employee.hpp  person.hpp
src/: SimpleCalculator.cpp  main.cpp  person.cpp
